[package]
name = "draug"
version = "0.3.1"
edition = "2024"
description = "A small, cgroup-aware process supervisor that restarts one target gracefully before the OOM killer does."
license = "Apache-2.0"
repository = "https://github.com/dvazar/draug"
readme = "README.md"
rust-version = "1.85"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31.3", features = ["signal", "time", "event", "process", "poll", "fs"] }
serde_json = "1.0.150"
ureq = "3.3.0"

[features]
_test_support = []

[dev-dependencies]
tempfile = "3.27.0"

# Test-only helper binary driven by the integration tests.
[[bin]]
name = "fake_target"
path = "tests/support/fake_target.rs"
required-features = ["_test_support"]

# Tell cargo-dist to ship only the main binary; fake_target is test-only.
[package.metadata.dist]
binaries = { "*" = ["draug"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
